data/derived/fa15/progs/unify/prog0205.ml.out
Characters 28-71:
  let _ = assoc (-1,"william",[("ranjit",85);("william",23);("moose",44)]);;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string * int
